se arreglo el bug que hcia que se reconozca el asignacion de mora de arrastre y no de normal

--- a/frontend/src/app/components/pages/cobros/cobros.component.html
+++ b/frontend/src/app/components/pages/cobros/cobros.component.html
@@ -498,6 +498,7 @@
       [defaultMetodoPago]="modalFormasCobro[0]?.id_forma_cobro || selectedFormaCobroId"
       [startCuotaOverride]="modalTipo === 'arrastre' ? null : getNextMensualidadStartCuota()"
       [frontSaldos]="getFrontSaldos()"
+      [detalleFactura]="pagos.value"
       (addPagos)="onAddPagosFromModal($event)"
     ></app-mensualidad-modal>
 
